--- a/package.json
+++ b/package.json
@@ -51,7 +51,10 @@
     "lint": "eslint . --ext .ts,.tsx",
     "prepare": "bun run build",
     "pack": "npm pack",
-    "release:dry": "npm publish --dry-run"
+    "release:dry": "npm publish --dry-run",
+    "version:patch": "npm version patch",
+    "version:minor": "npm version minor",
+    "version:major": "npm version major"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com",
