--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   ],
   "scripts": {
     "clean": "rm -rf dist",
-    "build:js": "bun build ./src/index.ts ./src/runtime.ts --outdir dist --target node --format esm --external bullmq --sourcemap",
+    "build:js": "bun build ./src/index.ts ./src/runtime.ts --outdir dist --target node --format esm --external bullmq --sourcemap --splitting",
     "build:types": "tsc -p tsconfig.build.json",
     "build": "bun run clean && bun run build:js && bun run build:types",
     "lint": "eslint . --ext .ts,.tsx",
