Fix: Use standard tsc build instead of bundling
- Replace bun build with tsc for proper library compilation
- Each file transpiled separately, preserving module structure
- Fixes duplicate registry bug where tasks weren't detected by workers
- Follows standard TypeScript library build practices

--- a/package.json
+++ b/package.json
@@ -45,9 +45,7 @@
   ],
   "scripts": {
     "clean": "rm -rf dist",
-    "build:js": "bun build ./src/index.ts ./src/runtime.ts --outdir dist --target node --format esm --external bullmq --sourcemap --splitting",
-    "build:types": "tsc -p tsconfig.build.json",
-    "build": "bun run clean && bun run build:js && bun run build:types",
+    "build": "bun run clean && tsc -p tsconfig.build.json",
     "lint": "eslint . --ext .ts,.tsx",
     "prepare": "bun run build",
     "pack": "npm pack",
