--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,15 +15,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: oven-sh/setup-bun@v2
+      - name: Setup Node for npm
+        uses: actions/setup-node@v4
         with:
-          bun-version: latest
-
-      - name: Install dependencies
-        run: bun install
+          node-version: 'lts/*'
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Build
-        run: bun run build
+        run: npm run build
 
       - name: Extract version from tag
         id: version
@@ -37,11 +36,8 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: Setup Node for npm
-        uses: actions/setup-node@v4
-        with:
-          node-version: 'lts/*'
-          registry-url: 'https://registry.npmjs.org'
+      - name: Install dependencies
+        run: npm ci
 
       - name: Verify npm version
         run: npm --version
