--- a/package.json
+++ b/package.json
@@ -60,8 +60,10 @@
   "sideEffects": false,
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/node": "^22.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "bullmq": "^5.64.1",
     "eslint": "^9.0.0",
     "typescript-eslint": "^8.0.0",
     "typescript": "^5.5.0"
